invest/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/imagedefs.h


FILE *I_fopen_group_file_old(const char *, const char *);

FILE *I_fopen_subgroup_file_new(const char *, const char *, const char *);

FILE *I_fopen_subgroup_file_append(const char *, const char *, const char *);

FILE *I_fopen_subgroup_file_old(const char *, const char *, const char *);


/* georef.c */
int I_compute_georef_equations(struct Control_Points *, double[3], double[3],
			       double[3], double[3]);

int I_georef(double, double, double *, double *, double[3], double[3]);


/* group.c */
int I_get_group(char *);

int I_put_group(const char *);

int I_get_subgroup(const char *, char *);

int I_put_subgroup(const char *, const char *);

int I_get_group_ref(const char *, struct Ref *);

int I_get_subgroup_ref(const char *, const char *, struct Ref *);

int I_init_ref_color_nums(struct Ref *);

int I_put_group_ref(const char *, const struct Ref *);

int I_put_subgroup_ref(const char *, const char *, const struct Ref *);

int I_add_file_to_group_ref(const char *, const char *, struct Ref *);

int I_transfer_group_ref_file(const struct Ref *, int, struct Ref *);

int I_init_group_ref(struct Ref *);

int I_free_group_ref(struct Ref *);


/* list_gp.c */
int I_list_group(const char *, const struct Ref *, FILE *);

int I_list_group_simple(const struct Ref *, FILE *);


/* list_subgp.c */
int I_list_subgroup(const char *, const char *, const struct Ref *, FILE *);

int I_list_subgroup_simple(const struct Ref *, FILE *);


/* loc_info.c */
int I_location_info(char *, const char *);


/* ls_groups.c */
int I_list_groups(int);

int I_list_subgroups(const char *, int);


/* points.c */
int I_new_control_point(struct Control_Points *, double, double, double,
			double, int);

int I_get_control_points(const char *, struct Control_Points *);

int I_put_control_points(const char *, const struct Control_Points *);


/* ref.c */
FILE *I_fopen_group_ref_new(const char *);

FILE *I_fopen_group_ref_old(const char *);

FILE *I_fopen_subgroup_ref_new(const char *, const char *);

FILE *I_fopen_subgroup_ref_old(const char *, const char *);


/* sig.c */
int I_init_signatures(struct Signature *, int);