OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/imagery.py


# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 31
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_group_file_old'):
    I_fopen_group_file_old = _libs['grass_I.6.4.2RC2'].I_fopen_group_file_old
    I_fopen_group_file_old.restype = POINTER(FILE)
    I_fopen_group_file_old.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 32
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_subgroup_file_new'):
    I_fopen_subgroup_file_new = _libs['grass_I.6.4.2RC2'].I_fopen_subgroup_file_new
    I_fopen_subgroup_file_new.restype = POINTER(FILE)
    I_fopen_subgroup_file_new.argtypes = [String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 33
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_subgroup_file_append'):
    I_fopen_subgroup_file_append = _libs['grass_I.6.4.2RC2'].I_fopen_subgroup_file_append
    I_fopen_subgroup_file_append.restype = POINTER(FILE)
    I_fopen_subgroup_file_append.argtypes = [String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 34
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_subgroup_file_old'):
    I_fopen_subgroup_file_old = _libs['grass_I.6.4.2RC2'].I_fopen_subgroup_file_old
    I_fopen_subgroup_file_old.restype = POINTER(FILE)
    I_fopen_subgroup_file_old.argtypes = [String, String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 37
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_compute_georef_equations'):
    I_compute_georef_equations = _libs['grass_I.6.4.2RC2'].I_compute_georef_equations
    I_compute_georef_equations.restype = c_int
    I_compute_georef_equations.argtypes = [POINTER(struct_Control_Points), c_double * 3, c_double * 3, c_double * 3, c_double * 3]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 39
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_georef'):
    I_georef = _libs['grass_I.6.4.2RC2'].I_georef
    I_georef.restype = c_int
    I_georef.argtypes = [c_double, c_double, POINTER(c_double), POINTER(c_double), c_double * 3, c_double * 3]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 42
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_get_group'):
    I_get_group = _libs['grass_I.6.4.2RC2'].I_get_group
    I_get_group.restype = c_int
    I_get_group.argtypes = [String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 43
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_put_group'):
    I_put_group = _libs['grass_I.6.4.2RC2'].I_put_group
    I_put_group.restype = c_int
    I_put_group.argtypes = [String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 44
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_get_subgroup'):
    I_get_subgroup = _libs['grass_I.6.4.2RC2'].I_get_subgroup
    I_get_subgroup.restype = c_int
    I_get_subgroup.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 45
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_put_subgroup'):
    I_put_subgroup = _libs['grass_I.6.4.2RC2'].I_put_subgroup
    I_put_subgroup.restype = c_int
    I_put_subgroup.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 46
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_get_group_ref'):
    I_get_group_ref = _libs['grass_I.6.4.2RC2'].I_get_group_ref
    I_get_group_ref.restype = c_int
    I_get_group_ref.argtypes = [String, POINTER(struct_Ref)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 47
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_get_subgroup_ref'):
    I_get_subgroup_ref = _libs['grass_I.6.4.2RC2'].I_get_subgroup_ref
    I_get_subgroup_ref.restype = c_int
    I_get_subgroup_ref.argtypes = [String, String, POINTER(struct_Ref)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 48
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_init_ref_color_nums'):
    I_init_ref_color_nums = _libs['grass_I.6.4.2RC2'].I_init_ref_color_nums
    I_init_ref_color_nums.restype = c_int
    I_init_ref_color_nums.argtypes = [POINTER(struct_Ref)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 49
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_put_group_ref'):
    I_put_group_ref = _libs['grass_I.6.4.2RC2'].I_put_group_ref
    I_put_group_ref.restype = c_int
    I_put_group_ref.argtypes = [String, POINTER(struct_Ref)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 50
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_put_subgroup_ref'):
    I_put_subgroup_ref = _libs['grass_I.6.4.2RC2'].I_put_subgroup_ref
    I_put_subgroup_ref.restype = c_int
    I_put_subgroup_ref.argtypes = [String, String, POINTER(struct_Ref)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 51
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_add_file_to_group_ref'):
    I_add_file_to_group_ref = _libs['grass_I.6.4.2RC2'].I_add_file_to_group_ref
    I_add_file_to_group_ref.restype = c_int
    I_add_file_to_group_ref.argtypes = [String, String, POINTER(struct_Ref)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 52
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_transfer_group_ref_file'):
    I_transfer_group_ref_file = _libs['grass_I.6.4.2RC2'].I_transfer_group_ref_file
    I_transfer_group_ref_file.restype = c_int
    I_transfer_group_ref_file.argtypes = [POINTER(struct_Ref), c_int, POINTER(struct_Ref)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 53
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_init_group_ref'):
    I_init_group_ref = _libs['grass_I.6.4.2RC2'].I_init_group_ref
    I_init_group_ref.restype = c_int
    I_init_group_ref.argtypes = [POINTER(struct_Ref)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 54
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_free_group_ref'):
    I_free_group_ref = _libs['grass_I.6.4.2RC2'].I_free_group_ref
    I_free_group_ref.restype = c_int
    I_free_group_ref.argtypes = [POINTER(struct_Ref)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 57
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_list_group'):
    I_list_group = _libs['grass_I.6.4.2RC2'].I_list_group
    I_list_group.restype = c_int
    I_list_group.argtypes = [String, POINTER(struct_Ref), POINTER(FILE)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 58
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_list_group_simple'):
    I_list_group_simple = _libs['grass_I.6.4.2RC2'].I_list_group_simple
    I_list_group_simple.restype = c_int
    I_list_group_simple.argtypes = [POINTER(struct_Ref), POINTER(FILE)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 61
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_list_subgroup'):
    I_list_subgroup = _libs['grass_I.6.4.2RC2'].I_list_subgroup
    I_list_subgroup.restype = c_int
    I_list_subgroup.argtypes = [String, String, POINTER(struct_Ref), POINTER(FILE)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 62
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_list_subgroup_simple'):
    I_list_subgroup_simple = _libs['grass_I.6.4.2RC2'].I_list_subgroup_simple
    I_list_subgroup_simple.restype = c_int
    I_list_subgroup_simple.argtypes = [POINTER(struct_Ref), POINTER(FILE)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 65
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_location_info'):
    I_location_info = _libs['grass_I.6.4.2RC2'].I_location_info
    I_location_info.restype = c_int
    I_location_info.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 68
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_list_groups'):
    I_list_groups = _libs['grass_I.6.4.2RC2'].I_list_groups
    I_list_groups.restype = c_int
    I_list_groups.argtypes = [c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 69
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_list_subgroups'):
    I_list_subgroups = _libs['grass_I.6.4.2RC2'].I_list_subgroups
    I_list_subgroups.restype = c_int
    I_list_subgroups.argtypes = [String, c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 72
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_new_control_point'):
    I_new_control_point = _libs['grass_I.6.4.2RC2'].I_new_control_point
    I_new_control_point.restype = c_int
    I_new_control_point.argtypes = [POINTER(struct_Control_Points), c_double, c_double, c_double, c_double, c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 74
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_get_control_points'):
    I_get_control_points = _libs['grass_I.6.4.2RC2'].I_get_control_points
    I_get_control_points.restype = c_int
    I_get_control_points.argtypes = [String, POINTER(struct_Control_Points)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 75
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_put_control_points'):
    I_put_control_points = _libs['grass_I.6.4.2RC2'].I_put_control_points
    I_put_control_points.restype = c_int
    I_put_control_points.argtypes = [String, POINTER(struct_Control_Points)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 78
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_group_ref_new'):
    I_fopen_group_ref_new = _libs['grass_I.6.4.2RC2'].I_fopen_group_ref_new
    I_fopen_group_ref_new.restype = POINTER(FILE)
    I_fopen_group_ref_new.argtypes = [String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 79
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_group_ref_old'):
    I_fopen_group_ref_old = _libs['grass_I.6.4.2RC2'].I_fopen_group_ref_old
    I_fopen_group_ref_old.restype = POINTER(FILE)
    I_fopen_group_ref_old.argtypes = [String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 80
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_subgroup_ref_new'):
    I_fopen_subgroup_ref_new = _libs['grass_I.6.4.2RC2'].I_fopen_subgroup_ref_new
    I_fopen_subgroup_ref_new.restype = POINTER(FILE)
    I_fopen_subgroup_ref_new.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 81
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_fopen_subgroup_ref_old'):
    I_fopen_subgroup_ref_old = _libs['grass_I.6.4.2RC2'].I_fopen_subgroup_ref_old
    I_fopen_subgroup_ref_old.restype = POINTER(FILE)
    I_fopen_subgroup_ref_old.argtypes = [String, String]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/imagedefs.h: 84
if hasattr(_libs['grass_I.6.4.2RC2'], 'I_init_signatures'):
    I_init_signatures = _libs['grass_I.6.4.2RC2'].I_init_signatures
    I_init_signatures.restype = c_int
    I_init_signatures.argtypes = [POINTER(struct_Signature), c_int]
